--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19,25 +19,10 @@
        "  'name': 'Don Sak',\n",
        "  'state': '',\n",
        "  'country': 'TH',\n",
-       "  'coord': {'lon': 99.691841, 'lat': 9.31676}},\n",
-       " {'id': 1117328,\n",
-       "  'name': 'Ban Thung That',\n",
-       "  'state': '',\n",
-       "  'country': 'TH',\n",
-       "  'coord': {'lon': 99.583328, 'lat': 8.26667}},\n",
-       " {'id': 1117344,\n",
-       "  'name': 'Thung Sai',\n",
-       "  'state': '',\n",
-       "  'country': 'TH',\n",
-       "  'coord': {'lon': 99.832672, 'lat': 16.31489}},\n",
-       " {'id': 1117557,\n",
-       "  'name': 'Tham Phannara',\n",
-       "  'state': '',\n",
-       "  'country': 'TH',\n",
-       "  'coord': {'lon': 99.395172, 'lat': 8.42044}}]"
+       "  'coord': {'lon': 99.691841, 'lat': 9.31676}}]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +35,7 @@
     "    d_test = json.load(f)\n",
     "\n",
     "th_cities = [city for city in d_test if city['country'] == 'TH']\n",
-    "th_cities[:4]\n",
+    "th_cities[:5]\n",
     "\n",
     "#count = len(th_cities)\n",
     "#count"
@@ -58,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -67,10 +52,11 @@
        "{'Don Sak': {'lat': 9.31676, 'lon': 99.691841},\n",
        " 'Ban Thung That': {'lat': 8.26667, 'lon': 99.583328},\n",
        " 'Thung Sai': {'lat': 16.31489, 'lon': 99.832672},\n",
-       " 'Tham Phannara': {'lat': 8.42044, 'lon': 99.395172}}"
+       " 'Tham Phannara': {'lat': 8.42044, 'lon': 99.395172},\n",
+       " 'Ban Talat Yai': {'lat': 7.88481, 'lon': 98.400078}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +69,7 @@
     "    } for city in th_cities\n",
     "}\n",
     "# provinces\n",
-    "dict(list(provinces.items())[:4])"
+    "dict(list(provinces.items())[:5])"
    ]
   },
   {
