--- a/work/pollution.ipynb
+++ b/work/pollution.ipynb
@@ -10,17 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4fb3b283-b728-435f-ab40-7843412471bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['main_flow', 'weather.ipynb', '.ipynb_checkpoints', 'save']"
+       "['pollution.ipynb',\n",
+       " 'Untitled.ipynb',\n",
+       " 'main_flow',\n",
+       " 'testasync.ipynb',\n",
+       " '.Trash-0',\n",
+       " 'testdatetime.ipynb',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'test_pollution.ipynb',\n",
+       " 'test.ipynb']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,208 +40,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "ca21e2bc-1e1a-4536-857a-eec8a1d2c490",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>province_id</th>\n",
-       "      <th>province</th>\n",
-       "      <th>provinceEN</th>\n",
-       "      <th>amphoe_id</th>\n",
-       "      <th>amphoe</th>\n",
-       "      <th>amphoeEN</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>81</td>\n",
-       "      <td>กระบี่</td>\n",
-       "      <td>Krabi</td>\n",
-       "      <td>8108</td>\n",
-       "      <td>เหนือคลอง</td>\n",
-       "      <td>Nuea Khlong</td>\n",
-       "      <td>8.074722</td>\n",
-       "      <td>99.003611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>81</td>\n",
-       "      <td>กระบี่</td>\n",
-       "      <td>Krabi</td>\n",
-       "      <td>8107</td>\n",
-       "      <td>ลำทับ</td>\n",
-       "      <td>Lam Thap</td>\n",
-       "      <td>8.071667</td>\n",
-       "      <td>99.291667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>81</td>\n",
-       "      <td>กระบี่</td>\n",
-       "      <td>Krabi</td>\n",
-       "      <td>8106</td>\n",
-       "      <td>ปลายพระยา</td>\n",
-       "      <td>Plai Phraya</td>\n",
-       "      <td>8.533333</td>\n",
-       "      <td>98.862778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>81</td>\n",
-       "      <td>กระบี่</td>\n",
-       "      <td>Krabi</td>\n",
-       "      <td>8102</td>\n",
-       "      <td>เขาพนม</td>\n",
-       "      <td>Khao Phanom</td>\n",
-       "      <td>8.264722</td>\n",
-       "      <td>99.049167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>81</td>\n",
-       "      <td>กระบี่</td>\n",
-       "      <td>Krabi</td>\n",
-       "      <td>8105</td>\n",
-       "      <td>อ่าวลึก</td>\n",
-       "      <td>Ao Luek</td>\n",
-       "      <td>8.377500</td>\n",
-       "      <td>98.721667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>920</th>\n",
-       "      <td>58</td>\n",
-       "      <td>แม่ฮ่องสอน</td>\n",
-       "      <td>Mae Hong Son</td>\n",
-       "      <td>5803</td>\n",
-       "      <td>ปาย</td>\n",
-       "      <td>Pai</td>\n",
-       "      <td>19.358611</td>\n",
-       "      <td>98.440000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>921</th>\n",
-       "      <td>58</td>\n",
-       "      <td>แม่ฮ่องสอน</td>\n",
-       "      <td>Mae Hong Son</td>\n",
-       "      <td>5804</td>\n",
-       "      <td>แม่สะเรียง</td>\n",
-       "      <td>Mae Sariang</td>\n",
-       "      <td>18.159444</td>\n",
-       "      <td>97.933611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>922</th>\n",
-       "      <td>58</td>\n",
-       "      <td>แม่ฮ่องสอน</td>\n",
-       "      <td>Mae Hong Son</td>\n",
-       "      <td>5805</td>\n",
-       "      <td>แม่ลาน้อย</td>\n",
-       "      <td>Mae La Noi</td>\n",
-       "      <td>18.384444</td>\n",
-       "      <td>97.936944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>923</th>\n",
-       "      <td>58</td>\n",
-       "      <td>แม่ฮ่องสอน</td>\n",
-       "      <td>Mae Hong Son</td>\n",
-       "      <td>5806</td>\n",
-       "      <td>สบเมย</td>\n",
-       "      <td>Sop Moei</td>\n",
-       "      <td>17.961944</td>\n",
-       "      <td>97.933333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>924</th>\n",
-       "      <td>58</td>\n",
-       "      <td>แม่ฮ่องสอน</td>\n",
-       "      <td>Mae Hong Son</td>\n",
-       "      <td>5807</td>\n",
-       "      <td>ปางมะผ้า</td>\n",
-       "      <td>Pang Mapha</td>\n",
-       "      <td>19.522500</td>\n",
-       "      <td>98.246111</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>925 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     province_id    province    provinceEN  amphoe_id      amphoe  \\\n",
-       "0             81      กระบี่         Krabi       8108   เหนือคลอง   \n",
-       "1             81      กระบี่         Krabi       8107       ลำทับ   \n",
-       "2             81      กระบี่         Krabi       8106   ปลายพระยา   \n",
-       "3             81      กระบี่         Krabi       8102      เขาพนม   \n",
-       "4             81      กระบี่         Krabi       8105     อ่าวลึก   \n",
-       "..           ...         ...           ...        ...         ...   \n",
-       "920           58  แม่ฮ่องสอน  Mae Hong Son       5803         ปาย   \n",
-       "921           58  แม่ฮ่องสอน  Mae Hong Son       5804  แม่สะเรียง   \n",
-       "922           58  แม่ฮ่องสอน  Mae Hong Son       5805   แม่ลาน้อย   \n",
-       "923           58  แม่ฮ่องสอน  Mae Hong Son       5806       สบเมย   \n",
-       "924           58  แม่ฮ่องสอน  Mae Hong Son       5807    ปางมะผ้า   \n",
-       "\n",
-       "        amphoeEN        lat        lon  \n",
-       "0    Nuea Khlong   8.074722  99.003611  \n",
-       "1       Lam Thap   8.071667  99.291667  \n",
-       "2    Plai Phraya   8.533333  98.862778  \n",
-       "3    Khao Phanom   8.264722  99.049167  \n",
-       "4        Ao Luek   8.377500  98.721667  \n",
-       "..           ...        ...        ...  \n",
-       "920          Pai  19.358611  98.440000  \n",
-       "921  Mae Sariang  18.159444  97.933611  \n",
-       "922   Mae La Noi  18.384444  97.936944  \n",
-       "923     Sop Moei  17.961944  97.933333  \n",
-       "924   Pang Mapha  19.522500  98.246111  \n",
-       "\n",
-       "[925 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan\n",
+      "/home/jovyan/save/amphoe_coord.csv\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/jovyan/save/amphoe_coord.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m coord_path = os.path.join(BASE_DIR, \u001b[33m\"\u001b[39m\u001b[33msave\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mamphoe_coord.csv\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(coord_path)\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m coord_df = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcoord_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m coord_df\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pandas/io/parsers/readers.py:1026\u001b[39m, in \u001b[36mread_csv\u001b[39m\u001b[34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[39m\n\u001b[32m   1013\u001b[39m kwds_defaults = _refine_defaults_read(\n\u001b[32m   1014\u001b[39m     dialect,\n\u001b[32m   1015\u001b[39m     delimiter,\n\u001b[32m   (...)\u001b[39m\u001b[32m   1022\u001b[39m     dtype_backend=dtype_backend,\n\u001b[32m   1023\u001b[39m )\n\u001b[32m   1024\u001b[39m kwds.update(kwds_defaults)\n\u001b[32m-> \u001b[39m\u001b[32m1026\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pandas/io/parsers/readers.py:620\u001b[39m, in \u001b[36m_read\u001b[39m\u001b[34m(filepath_or_buffer, kwds)\u001b[39m\n\u001b[32m    617\u001b[39m _validate_names(kwds.get(\u001b[33m\"\u001b[39m\u001b[33mnames\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[32m    619\u001b[39m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m620\u001b[39m parser = \u001b[43mTextFileReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    622\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[32m    623\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pandas/io/parsers/readers.py:1620\u001b[39m, in \u001b[36mTextFileReader.__init__\u001b[39m\u001b[34m(self, f, engine, **kwds)\u001b[39m\n\u001b[32m   1617\u001b[39m     \u001b[38;5;28mself\u001b[39m.options[\u001b[33m\"\u001b[39m\u001b[33mhas_index_names\u001b[39m\u001b[33m\"\u001b[39m] = kwds[\u001b[33m\"\u001b[39m\u001b[33mhas_index_names\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m   1619\u001b[39m \u001b[38;5;28mself\u001b[39m.handles: IOHandles | \u001b[38;5;28;01mNone\u001b[39;00m = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1620\u001b[39m \u001b[38;5;28mself\u001b[39m._engine = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_make_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pandas/io/parsers/readers.py:1880\u001b[39m, in \u001b[36mTextFileReader._make_engine\u001b[39m\u001b[34m(self, f, engine)\u001b[39m\n\u001b[32m   1878\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode:\n\u001b[32m   1879\u001b[39m         mode += \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m-> \u001b[39m\u001b[32m1880\u001b[39m \u001b[38;5;28mself\u001b[39m.handles = \u001b[43mget_handle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1881\u001b[39m \u001b[43m    \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1882\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1883\u001b[39m \u001b[43m    \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mencoding\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1884\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcompression\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1885\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmemory_map\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmemory_map\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1886\u001b[39m \u001b[43m    \u001b[49m\u001b[43mis_text\u001b[49m\u001b[43m=\u001b[49m\u001b[43mis_text\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1887\u001b[39m \u001b[43m    \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mencoding_errors\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mstrict\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1888\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mstorage_options\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1889\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1890\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m.handles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1891\u001b[39m f = \u001b[38;5;28mself\u001b[39m.handles.handle\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pandas/io/common.py:873\u001b[39m, in \u001b[36mget_handle\u001b[39m\u001b[34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[39m\n\u001b[32m    868\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(handle, \u001b[38;5;28mstr\u001b[39m):\n\u001b[32m    869\u001b[39m     \u001b[38;5;66;03m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[32m    870\u001b[39m     \u001b[38;5;66;03m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[32m    871\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m ioargs.encoding \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m ioargs.mode:\n\u001b[32m    872\u001b[39m         \u001b[38;5;66;03m# Encoding\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m873\u001b[39m         handle = \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[32m    874\u001b[39m \u001b[43m            \u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    875\u001b[39m \u001b[43m            \u001b[49m\u001b[43mioargs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    876\u001b[39m \u001b[43m            \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[43mioargs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    877\u001b[39m \u001b[43m            \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    878\u001b[39m \u001b[43m            \u001b[49m\u001b[43mnewline\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    879\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    880\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    881\u001b[39m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[32m    882\u001b[39m         handle = \u001b[38;5;28mopen\u001b[39m(handle, ioargs.mode)\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '/home/jovyan/save/amphoe_coord.csv'"
+     ]
     }
    ],
    "source": [
     "# select ชื่อเมืองในไทย\n",
+    "import os\n",
     "import pandas as pd\n",
     "\n",
-    "coord_df = pd.read_csv('./save/amphoe_coord.csv')\n",
+    "BASE_DIR = os.path.abspath(os.path.join(os.getcwd(), \"..\"))  # เดินขึ้น 1 ระดับจาก /home/jovyan/work\n",
+    "print(BASE_DIR)\n",
+    "coord_path = os.path.join(BASE_DIR, \"save\", \"amphoe_coord.csv\")\n",
+    "print(coord_path)\n",
+    "\n",
+    "coord_df = pd.read_csv(coord_path)\n",
     "coord_df\n"
    ]
   },
@@ -438,12 +284,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "238d00ce-9604-440f-b69c-12446cb6e01d",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
