update etl + gitignore

--- a/work/Untitled.ipynb
+++ b/work/Untitled.ipynb
@@ -14,7 +14,7 @@
     "import pytz\n",
     "from prefect import flow, task\n",
     "\n",
-    "API_KEY = \"68c16da5e675ad8635df84629765b118\"\n",
+    "API_KEY = \"13fd31c548dbeae77a5c0d773a99df79\"\n",
     "POLLUTION_ENDPOINT = \"http://api.openweathermap.org/data/2.5/air_pollution\"\n",
     "\n",
     "# แก้ให้รับค่าเป็น dictionary จาก row\n",
@@ -35,6 +35,7 @@
     "        response = requests.get(POLLUTION_ENDPOINT, params=params)\n",
     "        response.raise_for_status()\n",
     "        data = response.json()\n",
+    "        print(data)\n",
     "        \n",
     "        dt = datetime.now(pytz.timezone('Asia/Bangkok'))\n",
     "        \n",
