--- a/work/test.ipynb
+++ b/work/test.ipynb
@@ -800,6 +800,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13fd31c548dbeae77a5c0d773a99df79\n",
+      "your-access\n",
+      "your-secret\n",
+      "http://lakefs-dev:8000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()\n",
+    "API_KEY = os.getenv(\"OPENWEATHER_API_KEY\")\n",
+    "ACCESS_KEY = os.getenv(\"LAKEFS_ACCESS_KEY\")\n",
+    "SECRET_KEY = os.getenv(\"LAKEFS_SECRET_KEY\")\n",
+    "lakefs_endpoint = os.getenv(\"LAKEFS_ENDPOINT\", \"http://lakefs-dev:8000\")\n",
+    "print(API_KEY)\n",
+    "print(ACCESS_KEY)\n",
+    "print(SECRET_KEY)\n",
+    "print(lakefs_endpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
