--- a/work/test.ipynb
+++ b/work/test.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -808,9 +808,9 @@
      "output_type": "stream",
      "text": [
       "13fd31c548dbeae77a5c0d773a99df79\n",
-      "your-access\n",
-      "your-secret\n",
-      "http://lakefs-dev:8000\n"
+      "access_key\n",
+      "secret_key\n",
+      "http://lakefs-dev:8000/\n"
      ]
     }
    ],
