update column name + clean file

--- a/work/testasync.ipynb
+++ b/work/testasync.ipynb
@@ -74,8 +74,8 @@
     "        # await asyncio.sleep(1)  #พัก 1 วิแบบไม่บล็อก loop\n",
     "        lat = row['lat']\n",
     "        lon = row['lon']\n",
-    "        province = row['provinceEN']\n",
-    "        district = row['amphoeEN']\n",
+    "        province = row['province_en']\n",
+    "        district = row['district_en']\n",
     "        try:\n",
     "            params = {\n",
     "                \"lat\" : lat,\n",
@@ -222,7 +222,7 @@
     "    start_time = time.perf_counter()  # ⏱ เริ่มจับเวลา\n",
     "\n",
     "    BASE_DIR = os.path.abspath(os.path.join(os.getcwd(), \"..\"))  #/home/jovyan/work\n",
-    "    coord_path = os.path.join(BASE_DIR, \"save\", \"amphoe_coord.csv\")\n",
+    "    coord_path = os.path.join(BASE_DIR, \"save\", \"district_coord.csv\")\n",
     "    coord_df = pd.read_csv(coord_path)\n",
     "    df_sample = coord_df.sample(10)\n",
     "    pollution_results = await fetch_pollution_data(df_sample)\n",
@@ -433,7 +433,7 @@
    "source": [
     "# #Check path + Sample\n",
     "# BASE_DIR = os.path.abspath(os.path.join(os.getcwd(), \"..\"))  #/home/jovyan/work\n",
-    "# coord_path = os.path.join(BASE_DIR, \"save\", \"amphoe_coord.csv\")\n",
+    "# coord_path = os.path.join(BASE_DIR, \"save\", \"district_coord.csv\")\n",
     "# coord_df = pd.read_csv(coord_path)\n",
     "# df_sample = coord_df.sample(10)\n",
     "# df_sample"
@@ -698,6 +698,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db6d2606-66ea-4c7b-b546-4d8f826df8b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "092a2077-7ba2-4591-82c2-f27598f1bbd5",
    "metadata": {},
    "outputs": [],
@@ -723,112 +731,6 @@
     "    error_df.to_csv(\"pollution_errors.csv\", index=False)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "904b585f-051b-4441-a7df-ef75622353af",
-   "metadata": {},
-   "source": [
-    "### LakeFS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e2ca67b-f080-49ec-b733-ceca7b4058e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " # lakeFS credentials from your docker-compose.yml\n",
-    "ACCESS_KEY = \"access_key\"\n",
-    "SECRET_KEY = \"secret_key\"\n",
-    "    \n",
-    "# lakeFS endpoint (running locally)\n",
-    "lakefs_endpoint = \"http://lakefs-dev:8000/\"\n",
-    "    \n",
-    "    # lakeFS repository, branch, and file path\n",
-    "repo = \"pollution-data\"\n",
-    "branch = \"main\"\n",
-    "path = \"pollution.parquet\"\n",
-    "    \n",
-    "    # Construct the full lakeFS S3-compatible path\n",
-    "lakefs_s3_path = f\"s3a://{repo}/{branch}/{path}\"\n",
-    "    \n",
-    "    # Configure storage_options for lakeFS (S3-compatible)\n",
-    "storage_options = {\n",
-    "    \"key\": ACCESS_KEY,\n",
-    "    \"secret\": SECRET_KEY,\n",
-    "    \"client_kwargs\": {\n",
-    "        \"endpoint_url\": lakefs_endpoint\n",
-    "    }\n",
-    "    }\n",
-    "pollution_df.to_parquet(\n",
-    "    lakefs_s3_path,\n",
-    "    storage_options=storage_options,\n",
-    "    partition_cols=['year','month','day','hour'],\n",
-    "        \n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db6d2606-66ea-4c7b-b546-4d8f826df8b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eef08406-45c3-4058-a4a1-9b4591f88417",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dff3f6f8-9fb4-4462-acc9-03eed52787c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from prefect import flow, task\n",
-    "\n",
-    "@task\n",
-    "async def fetch_pollution_data(...):\n",
-    "    ...\n",
-    "\n",
-    "def clean_data(results):\n",
-    "    df = pd.DataFrame(results)\n",
-    "    df = df[df['error'].isna()]  # กรอง error ออก\n",
-    "    return df.drop(columns=['error'], errors='ignore')\n",
-    "\n",
-    "def save_to_lakefs(df, path):\n",
-    "    df.to_parquet(path, index=False)\n",
-    "\n",
-    "@flow\n",
-    "async def pollution_pipeline():\n",
-    "    raw_results = await fetch_pollution_data(...)\n",
-    "    clean_df = clean_data(raw_results)\n",
-    "    save_to_lakefs(clean_df, \"s3://lakefs/bucket/pollution.parquet\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b85bdc65-863d-43dd-82be-20821032c158",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aafdd5c8-7704-4f45-912d-614206baa52e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
