--- a/work/testflow.ipynb
+++ b/work/testflow.ipynb
@@ -64,15 +64,11 @@
     "lakefs_endpoint = os.getenv(\"LAKEFS_ENDPOINT\", \"http://lakefs-dev:8000\")\n",
     "\n",
     "@task\n",
-    "async def fetch_pollution_data(df_sample, dt, localtime, batch_size=300):  #sample\n",
+    "async def fetch_pollution_data(df_sample, batch_size=10):  #sample\n",
     "    # API_KEY = \"13fd31c548dbeae77a5c0d773a99df79\"\n",
     "    # API_KEY = os.getenv(\"OPENWEATHER_API_KEY\")\n",
     "    # WEATHER_ENDPOINT = \"https://api.openweathermap.org/data/2.5/weather\"\n",
     "    POLLUTION_ENDPOINT = \"http://api.openweathermap.org/data/2.5/air_pollution\"\n",
-    "\n",
-    "    # dt = datetime.utcnow()\n",
-    "    # thai_tz = pytz.timezone('Asia/Bangkok')\n",
-    "    # localtime = dt.astimezone(thai_tz)\n",
     "    \n",
     "    async def fetch_row(session, row):\n",
     "        # await asyncio.sleep(1)  #พัก 1 วิแบบไม่บล็อก loop\n",
@@ -100,7 +96,10 @@
     "                #         'error': f\"HTTP {response.status}\"\n",
     "                #     }\n",
     "                data = await response.json()\n",
-    "               \n",
+    "\n",
+    "                dt = datetime.utcnow()\n",
+    "                thai_tz = pytz.timezone('Asia/Bangkok')\n",
+    "                localtime = dt.astimezone(thai_tz)\n",
     "                components = data['list'][0]['components']\n",
     "                pollution_dict = {\n",
     "                    'timestamp': dt,\n",
@@ -156,8 +155,7 @@
     "            batch = df_sample.iloc[i*batch_size:(i+1)*batch_size]\n",
     "            tasks = [fetch_row(session, row) for _, row in batch.iterrows()]\n",
     "            batch_results = await asyncio.gather(*tasks)\n",
-    "            pollution_results.extend(batch_results)\n",
-    "\n",
+    "            pollution_results.extend([r for r in batch_results if r is not None])\n",
     "            print(f\"✅ เสร็จ batch {i+1}/{total_batches}\")\n",
     "            if i < total_batches - 1:\n",
     "                await asyncio.sleep(65)  # ✅ รอให้ผ่าน rate limit\n",
@@ -167,16 +165,11 @@
     "\n",
     "\n",
     "@task\n",
-    "async def fetch_weather_data(df_sample, dt, localtime, batch_size=300):  #sample\n",
+    "async def fetch_weather_data(df_sample, batch_size=300):  #sample\n",
     "    # API_KEY = \"13fd31c548dbeae77a5c0d773a99df79\"\n",
     "    # API_KEY = os.getenv(\"OPENWEATHER_API_KEY\")\n",
     "    WEATHER_ENDPOINT = \"https://api.openweathermap.org/data/2.5/weather\"\n",
     "    # POLLUTION_ENDPOINT = \"http://api.openweathermap.org/data/2.5/air_pollution\"\n",
-    "    \n",
-    "    # dt = datetime.utcnow()\n",
-    "    # thai_tz = pytz.timezone('Asia/Bangkok')\n",
-    "    # localtime = dt.astimezone(thai_tz)\n",
-    "\n",
     "    \n",
     "    async def fetch_row(session, row):\n",
     "        # await asyncio.sleep(1)  #พัก 1 วิแบบไม่บล็อก loop\n",
@@ -203,7 +196,9 @@
     "                #     }\n",
     "                data = await response.json()\n",
     "\n",
-    "                \n",
+    "                dt = datetime.utcnow()\n",
+    "                thai_tz = pytz.timezone('Asia/Bangkok')\n",
+    "                localtime = dt.astimezone(thai_tz)\n",
     "                weather_dict = {\n",
     "                    'timestamp': dt,\n",
     "                    'year': dt.year,\n",
@@ -251,8 +246,7 @@
     "            batch = df_sample.iloc[i*batch_size:(i+1)*batch_size]\n",
     "            tasks = [fetch_row(session, row) for _, row in batch.iterrows()]\n",
     "            batch_results = await asyncio.gather(*tasks)\n",
-    "            weather_results.extend(batch_results)\n",
-    "\n",
+    "            weather_results.extend([r for r in batch_results if r is not None])\n",
     "            print(f\"✅ เสร็จ batch {i+1}/{total_batches}\")\n",
     "            if i < total_batches - 1:\n",
     "                await asyncio.sleep(65)  # ✅ รอให้ผ่าน rate limit\n",
@@ -261,13 +255,17 @@
     "\n",
     "\n",
     "\n",
-    "def clean_data(df):\n",
+    "def clean_data(df, flow_timestamp):\n",
     "    df = pd.DataFrame(df)\n",
     "    # if 'error' in df.columns:\n",
     "    #     # df = df[df['error'].isna()]  # กรอง row ที่มี error ออก\n",
     "    #     df = df.drop(columns=['error'], errors='ignore')  # ลบคอลัมน์ error\n",
     "    df['province'] = df['province'].astype(\"string\")\n",
     "    df['district'] = df['district'].astype(\"string\")\n",
+    "\n",
+    "    # pass ไปให้แต่ละ task หรือ save เป็นคอลัมน์ตอนสร้าง DataFrame\n",
+    "    df[\"flow_timestamp\"] = flow_timestamp\n",
+    "\n",
     "    return df\n",
     "\n",
     "\n",
@@ -336,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8f1ca1ec-84f3-4fe5-94d8-d44e4a3742f0",
    "metadata": {},
    "outputs": [],
@@ -344,23 +342,25 @@
     "import time\n",
     "import os\n",
     "import pandas as pd\n",
+    "from datetime import datetime\n",
     "\n",
     "@flow(name=\"main-flow\", log_prints=True)\n",
     "async def main_flow():\n",
     "    start_time = time.perf_counter()  # ⏱ เริ่มจับเวลา\n",
     "\n",
-    "    dt = datetime.utcnow()\n",
-    "    thai_tz = pytz.timezone('Asia/Bangkok')\n",
-    "    localtime = dt.astimezone(thai_tz)\n",
+    "    # dt = datetime.utcnow()\n",
+    "    # thai_tz = pytz.timezone('Asia/Bangkok')\n",
+    "    # localtime = dt.astimezone(thai_tz)\n",
+    "    flow_timestamp = datetime.utcnow()\n",
     "    \n",
     "    BASE_DIR = os.path.abspath(os.path.join(os.getcwd(), \"..\"))  #/home/jovyan/work\n",
     "    coord_path = os.path.join(BASE_DIR, \"save\", \"district_coord.csv\")\n",
     "    coord_df = pd.read_csv(coord_path)\n",
-    "    df_sample = coord_df.sample(10)\n",
-    "    \n",
+    "    df_sample = coord_df.sample(20)\n",
+    "\n",
     "    # pollution_results = await fetch_pollution_data(coord_df)\n",
-    "    pollution_results = await fetch_pollution_data(df_sample, dt, localtime)\n",
-    "    weather_results = await fetch_weather_data(df_sample, dt, localtime)\n",
+    "    pollution_results = await fetch_pollution_data(df_sample)\n",
+    "    weather_results = await fetch_weather_data(df_sample)\n",
     "    # weather_data = pd.DataFrame(weather_results)\n",
     "    # print(weather_data)\n",
     "    # #Check Error\n",
@@ -370,8 +370,9 @@
     "    #     print(\"\\n❗ Error Rows:\")\n",
     "    #     print(error_df[['province', 'amphoe', 'error']].head())\n",
     "    \n",
-    "    pollution_data = clean_data(pollution_results)\n",
-    "    weather_data = clean_data(weather_results)\n",
+    "    pollution_data = clean_data(pollution_results, flow_timestamp)\n",
+    "    weather_data = clean_data(weather_results, flow_timestamp)\n",
+    "\n",
     "    \n",
     "    end_time = time.perf_counter()  # ⏱ จับเวลาอีกครั้ง\n",
     "    print(f\"\\n✅ ดึงข้อมูลเสร็จทั้งหมด ใช้เวลา {end_time - start_time:.2f} วินาที\")\n",
@@ -593,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "5394fee3-d882-4108-bc94-3d285e991b38",
    "metadata": {
     "scrolled": true
@@ -602,11 +603,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:36:57.919 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | prefect.engine - Created flow run<span style=\"color: #800080; text-decoration-color: #800080\"> 'steady-beluga'</span> for flow<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> 'main-flow'</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:11:02.418 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | prefect.engine - Created flow run<span style=\"color: #800080; text-decoration-color: #800080\"> 'unselfish-viper'</span> for flow<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\"> 'main-flow'</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:36:57.919 | \u001b[36mINFO\u001b[0m    | prefect.engine - Created flow run\u001b[35m 'steady-beluga'\u001b[0m for flow\u001b[1;35m 'main-flow'\u001b[0m\n"
+       "04:11:02.418 | \u001b[36mINFO\u001b[0m    | prefect.engine - Created flow run\u001b[35m 'unselfish-viper'\u001b[0m for flow\u001b[1;35m 'main-flow'\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -615,11 +616,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:36:57.923 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | prefect.engine - View at <span style=\"color: #0000ff; text-decoration-color: #0000ff\">http://prefect-server:4200/runs/flow-run/0f896dcd-576e-450d-bd4a-588fdcc06e6e</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:11:02.423 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | prefect.engine - View at <span style=\"color: #0000ff; text-decoration-color: #0000ff\">http://prefect-server:4200/runs/flow-run/26b8e71a-1f7b-42ef-9bf9-3f9746b97944</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:36:57.923 | \u001b[36mINFO\u001b[0m    | prefect.engine - View at \u001b[94mhttp://prefect-server:4200/runs/flow-run/0f896dcd-576e-450d-bd4a-588fdcc06e6e\u001b[0m\n"
+       "04:11:02.423 | \u001b[36mINFO\u001b[0m    | prefect.engine - View at \u001b[94mhttp://prefect-server:4200/runs/flow-run/26b8e71a-1f7b-42ef-9bf9-3f9746b97944\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -628,11 +629,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:36:58.171 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_pollution_data-0' - Created task run 'fetch_pollution_data-0' for task 'fetch_pollution_data'\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:11:02.752 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_pollution_data-0' - Created task run 'fetch_pollution_data-0' for task 'fetch_pollution_data'\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:36:58.171 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_pollution_data-0' - Created task run 'fetch_pollution_data-0' for task 'fetch_pollution_data'\n"
+       "04:11:02.752 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_pollution_data-0' - Created task run 'fetch_pollution_data-0' for task 'fetch_pollution_data'\n"
       ]
      },
      "metadata": {},
@@ -641,11 +642,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:36:58.602 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_pollution_data-0' - ✅ เสร็จ batch 1/1\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:11:03.267 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_pollution_data-0' - ✅ เสร็จ batch 1/2\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:36:58.602 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_pollution_data-0' - ✅ เสร็จ batch 1/1\n"
+       "04:11:03.267 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_pollution_data-0' - ✅ เสร็จ batch 1/2\n"
       ]
      },
      "metadata": {},
@@ -654,11 +655,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:36:58.644 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_pollution_data-0' - Finished in state <span style=\"color: #008000; text-decoration-color: #008000\">Completed</span>()\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:12:08.709 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_pollution_data-0' - ✅ เสร็จ batch 2/2\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:36:58.644 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_pollution_data-0' - Finished in state \u001b[32mCompleted\u001b[0m()\n"
+       "04:12:08.709 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_pollution_data-0' - ✅ เสร็จ batch 2/2\n"
       ]
      },
      "metadata": {},
@@ -667,11 +668,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:36:58.766 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_weather_data-0' - Created task run 'fetch_weather_data-0' for task 'fetch_weather_data'\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:12:08.859 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_pollution_data-0' - Finished in state <span style=\"color: #008000; text-decoration-color: #008000\">Completed</span>()\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:36:58.766 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_weather_data-0' - Created task run 'fetch_weather_data-0' for task 'fetch_weather_data'\n"
+       "04:12:08.859 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_pollution_data-0' - Finished in state \u001b[32mCompleted\u001b[0m()\n"
       ]
      },
      "metadata": {},
@@ -680,11 +681,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:36:59.016 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_weather_data-0' - ✅ เสร็จ batch 1/1\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:12:09.052 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_weather_data-0' - Created task run 'fetch_weather_data-0' for task 'fetch_weather_data'\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:36:59.016 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_weather_data-0' - ✅ เสร็จ batch 1/1\n"
+       "04:12:09.052 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_weather_data-0' - Created task run 'fetch_weather_data-0' for task 'fetch_weather_data'\n"
       ]
      },
      "metadata": {},
@@ -693,11 +694,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:36:59.039 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_weather_data-0' - Finished in state <span style=\"color: #008000; text-decoration-color: #008000\">Completed</span>()\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:12:09.293 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_weather_data-0' - ✅ เสร็จ batch 1/1\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:36:59.039 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_weather_data-0' - Finished in state \u001b[32mCompleted\u001b[0m()\n"
+       "04:12:09.293 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_weather_data-0' - ✅ เสร็จ batch 1/1\n"
       ]
      },
      "metadata": {},
@@ -706,13 +707,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:36:59.048 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Flow run<span style=\"color: #800080; text-decoration-color: #800080\"> 'steady-beluga'</span> - \n",
-       "✅ ดึงข้อมูลเสร็จทั้งหมด ใช้เวลา 1.06 วินาที\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:12:09.324 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Task run 'fetch_weather_data-0' - Finished in state <span style=\"color: #008000; text-decoration-color: #008000\">Completed</span>()\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:36:59.048 | \u001b[36mINFO\u001b[0m    | Flow run\u001b[35m 'steady-beluga'\u001b[0m - \n",
-       "✅ ดึงข้อมูลเสร็จทั้งหมด ใช้เวลา 1.06 วินาที\n"
+       "04:12:09.324 | \u001b[36mINFO\u001b[0m    | Task run 'fetch_weather_data-0' - Finished in state \u001b[32mCompleted\u001b[0m()\n"
       ]
      },
      "metadata": {},
@@ -721,11 +720,26 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">09:37:00.524 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Flow run<span style=\"color: #800080; text-decoration-color: #800080\"> 'steady-beluga'</span> - Finished in state <span style=\"color: #008000; text-decoration-color: #008000\">Completed</span>()\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:12:09.354 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Flow run<span style=\"color: #800080; text-decoration-color: #800080\"> 'unselfish-viper'</span> - \n",
+       "✅ ดึงข้อมูลเสร็จทั้งหมด ใช้เวลา 66.83 วินาที\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "09:37:00.524 | \u001b[36mINFO\u001b[0m    | Flow run\u001b[35m 'steady-beluga'\u001b[0m - Finished in state \u001b[32mCompleted\u001b[0m()\n"
+       "04:12:09.354 | \u001b[36mINFO\u001b[0m    | Flow run\u001b[35m 'unselfish-viper'\u001b[0m - \n",
+       "✅ ดึงข้อมูลเสร็จทั้งหมด ใช้เวลา 66.83 วินาที\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">04:12:09.981 | <span style=\"color: #008080; text-decoration-color: #008080\">INFO</span>    | Flow run<span style=\"color: #800080; text-decoration-color: #800080\"> 'unselfish-viper'</span> - Finished in state <span style=\"color: #008000; text-decoration-color: #008000\">Completed</span>()\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "04:12:09.981 | \u001b[36mINFO\u001b[0m    | Flow run\u001b[35m 'unselfish-viper'\u001b[0m - Finished in state \u001b[32mCompleted\u001b[0m()\n"
       ]
      },
      "metadata": {},
