--- a/work/testread.ipynb
+++ b/work/testread.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "b3a0a7dc-1ec8-4092-ad7c-e34b77b84706",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "cd2e9a78-f6ad-4cab-85ba-035c63544ba5",
    "metadata": {},
    "outputs": [],
@@ -303,9 +303,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lakefs_s3_path,\n",
-    "storage_options=storage_options,\n",
-    "partition_cols=[\"year\", \"month\", \"day\", \"hour\"],\n"
+    "# lakefs_s3_path,\n",
+    "# storage_options=storage_options,\n",
+    "# partition_cols=[\"year\", \"month\", \"day\", \"hour\"],\n"
    ]
   },
   {
@@ -317,15 +317,7 @@
     {
      "data": {
       "text/plain": [
-       "['pollution-data/main/pollution.parquet/year=2025/month=5/day=11/hour=10/5127aa0fd46841dcba3ad95008af1c7d-0.parquet',\n",
-       " 'pollution-data/main/pollution.parquet/year=2025/month=5/day=11/hour=10/7618a4048b804aea823d8441c4ced39e-0.parquet',\n",
-       " 'pollution-data/main/pollution.parquet/year=2025/month=5/day=11/hour=11/43cf2310383f45f59ceaa17b813832fb-0.parquet',\n",
-       " 'pollution-data/main/pollution.parquet/year=2025/month=5/day=11/hour=11/544f320dc626455289922a1d1abd078e-0.parquet',\n",
-       " 'pollution-data/main/pollution.parquet/year=2025/month=5/day=11/hour=11/a3d9c0ef57204335a81783b7ad3e8f28-0.parquet',\n",
-       " 'pollution-data/main/pollution.parquet/year=2025/month=5/day=11/hour=15/fb9472265301423bbceb64b87dceae2e-0.parquet',\n",
-       " 'pollution-data/main/pollution.parquet/year=2025/month=5/day=11/hour=17/bd5d4217b47743f2b597ac5cd8293ba0-0.parquet',\n",
-       " 'pollution-data/main/pollution.parquet/year=2025/month=5/day=8/hour=7/65115bb9bda04046b9edd615bb61f0f4-0.parquet',\n",
-       " 'pollution-data/main/pollution.parquet/year=2025/month=5/day=8/hour=7/e21471d3f88240dab4293cc1db3e473d-0.parquet']"
+       "27"
       ]
      },
      "execution_count": 6,
@@ -343,7 +335,7 @@
     ")\n",
     "\n",
     "data_list = fs.glob(f\"{path}/*/*/*/*/*\")\n",
-    "data_list"
+    "len(data_list)"
    ]
   },
   {
@@ -353,36 +345,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1920 entries, 0 to 1919\n",
-      "Data columns (total 20 columns):\n",
-      " #   Column            Non-Null Count  Dtype                       \n",
-      "---  ------            --------------  -----                       \n",
-      " 0   timestamp         1920 non-null   datetime64[ns]              \n",
-      " 1   minute            1920 non-null   int64                       \n",
-      " 2   localtime         1920 non-null   datetime64[ns, Asia/Bangkok]\n",
-      " 3   province          1920 non-null   object                      \n",
-      " 4   district          1900 non-null   object                      \n",
-      " 5   lat               1920 non-null   float64                     \n",
-      " 6   lon               1920 non-null   float64                     \n",
-      " 7   main.aqi          1900 non-null   float64                     \n",
-      " 8   components_co     1900 non-null   float64                     \n",
-      " 9   components_no     1900 non-null   float64                     \n",
-      " 10  components_no2    1900 non-null   float64                     \n",
-      " 11  components_o3     1900 non-null   float64                     \n",
-      " 12  components_so2    1900 non-null   float64                     \n",
-      " 13  components_pm2_5  1900 non-null   float64                     \n",
-      " 14  components_pm10   1900 non-null   float64                     \n",
-      " 15  components_nh3    1900 non-null   float64                     \n",
-      " 16  year              1920 non-null   object                      \n",
-      " 17  month             1920 non-null   object                      \n",
-      " 18  day               1920 non-null   object                      \n",
-      " 19  hour              1920 non-null   object                      \n",
-      "dtypes: datetime64[ns, Asia/Bangkok](1), datetime64[ns](1), float64(11), int64(1), object(6)\n",
-      "memory usage: 300.1+ KB\n"
+     "ename": "FileNotFoundError",
+     "evalue": "pollution-data/main/pollution.parquet/year=2025/month=5/day=13/hour=3/b082cc4d7f844fb2b219eee5018d1fc9-0.parquet",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      2\u001b[39m path = \u001b[33m\"\u001b[39m\u001b[33mpollution-data/main/pollution.parquet/\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m dataset = ds.dataset(\n\u001b[32m      4\u001b[39m     path,\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mformat\u001b[39m=\u001b[33m\"\u001b[39m\u001b[33mparquet\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      6\u001b[39m     partitioning=[\u001b[33m\"\u001b[39m\u001b[33myear\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mmonth\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mday\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mhour\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      7\u001b[39m     filesystem=fs\n\u001b[32m      8\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m table = \u001b[43mdataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto_table\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m df = table.to_pandas()\n\u001b[32m     12\u001b[39m df.info()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/_dataset.pyx:574\u001b[39m, in \u001b[36mpyarrow._dataset.Dataset.to_table\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/_dataset.pyx:3865\u001b[39m, in \u001b[36mpyarrow._dataset.Scanner.to_table\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/error.pxi:155\u001b[39m, in \u001b[36mpyarrow.lib.pyarrow_internal_check_status\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/error.pxi:89\u001b[39m, in \u001b[36mpyarrow.lib.check_status\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/_fs.pyx:1559\u001b[39m, in \u001b[36mpyarrow._fs._cb_open_input_file\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/fs.py:419\u001b[39m, in \u001b[36mFSSpecHandler.open_input_file\u001b[39m\u001b[34m(self, path)\u001b[39m\n\u001b[32m    416\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mpyarrow\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PythonFile\n\u001b[32m    418\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m.fs.isfile(path):\n\u001b[32m--> \u001b[39m\u001b[32m419\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(path)\n\u001b[32m    421\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m PythonFile(\u001b[38;5;28mself\u001b[39m.fs.open(path, mode=\u001b[33m\"\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m\"\u001b[39m), mode=\u001b[33m\"\u001b[39m\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: pollution-data/main/pollution.parquet/year=2025/month=5/day=13/hour=3/b082cc4d7f844fb2b219eee5018d1fc9-0.parquet"
      ]
     }
    ],
@@ -397,7 +373,6 @@
     ")\n",
     "\n",
     "table = dataset.to_table()\n",
-    "table\n",
     "df = table.to_pandas()\n",
     "df.info()"
    ]
